@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2024-08-30T01:03:05Z",
-  "count_outdated" : 493,
-  "uniques_outdated" : 320,
+  "timestamp" : "2024-09-03T01:02:32Z",
+  "count_outdated" : 496,
+  "uniques_outdated" : 323,
   "count" : 497,
   "uniques" : 324,
   "clones" : [
-    {
-      "timestamp": "2024-08-19T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
-    {
-      "timestamp": "2024-08-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-08-26T00:00:00Z",
       "count": 1,
