@@ -1,17 +1,7 @@
 {
-  "count": 4,
-  "uniques": 4,
+  "count": 1,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2024-08-19T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2024-08-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-08-26T00:00:00Z",
       "count": 1,
